tests/snapshots/functions__no_return__bindgen.snap
---
source: tests/functions.rs
expression: bo.bindings
---
// Bindings generated by `windows-bindgen` 0.49.0

#![allow(
    non_snake_case,
    non_upper_case_globals,
    non_camel_case_types,
    dead_code,
    clippy::all
)]
::windows_targets::link!("kernel32.dll" "system" fn ExitProcess(uexitcode : u32) -> !);
::windows_targets::link!("kernel32.dll" "system" fn ExitThread(dwexitcode : u32) -> !);
::windows_targets::link!("kernel32.dll" "system" fn FatalExit(exitcode : i32) -> !);
::windows_targets::link!("kernel32.dll" "system" fn FreeLibraryAndExitThread(hlibmodule : HMODULE, dwexitcode : u32) -> !);
pub type HMODULE = isize;

