tests/snapshots/functions__no_return__ls-rawdylib_es-bindgen.snap
---
source: tests/functions.rs
expression: bo.bindings
---
#![allow(non_snake_case, non_upper_case_globals, non_camel_case_types)]
#[link(name = "kernel32", kind = "raw-dylib")]
extern "system" {
    pub fn ExitProcess(uExitCode: u32) -> !;
    pub fn ExitThread(dwExitCode: u32) -> !;
    pub fn FatalExit(ExitCode: i32) -> !;
    pub fn FreeLibraryAndExitThread(hLibModule: HMODULE, dwExitCode: u32) -> !;
}
pub type HMODULE = isize;

